--- a/main.html
+++ b/main.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
-        <script src="./dist/aframe.js"></script>
+        <title> 1 </title>
+        <script src="../dist/aframe.js"></script>
+        <script src="../dist/three.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/three.ar.js@latest/dist/three.ar.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@master/dist/aframe-ar.js"></script>
     </head>
