--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
     <head>
         <title> 1 </title>
         <script src="../dist/aframe.js"></script>
-        <script src="../dist/three.js"></script>
+        <!--<script src="../dist/three.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/three.ar.js@latest/dist/three.ar.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@master/dist/aframe-ar.js"></script>
     </head>
