--- a/main.html
+++ b/main.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title> 1 </title>
+        <title> AR Test </title>
+        <link rel="stylesheet" type="text/css" href="main.css">
         <script src="./dist/aframe.js"></script>
         <!--<script src="../dist/three.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/three.ar.js@latest/dist/three.ar.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@master/dist/aframe-ar.js"></script>
     </head>
     <body>
+        <div>
+            <h2> Hello </h2>
+        </div>
         <a-scene ar>
-            <a-box scale="0.25 0.25 0.25" position="-0.25 0.125 -0.75" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
+            <a-box scale="0.25 0.25 0.25" position="1 1 1" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
         </a-scene>
     </body>
 </html>
