--- a/main.html
+++ b/main.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
         <title> AR Test </title>
         <link rel="stylesheet" type="text/css" href="main.css">
-        <script src="https://aframe.io/releases/0.7.1/aframe.min.js"></script>
+        <script src="https://aframe.io/releases/0.8.0/aframe.js"></script>
         <!--<script src="../dist/three.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/three.ar.js@latest/dist/three.ar.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@master/dist/aframe-ar.js"></script>
     </head>
     <body>
         <div>
-            <h2> Hello7 </h2>
+            <h2> Hello8 </h2>
         </div>
         <a-scene ar>
             <a-box scale="0.25 0.25 0.25" position="0 0 0" rotation="0 0 0" color="#4CC3D9" shadow></a-box>
