--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
     </head>
     <body>
         <div>
-            <h2> Hello8 </h2>
+            <h2> Hello9 </h2>
         </div>
-        <a-scene ar>
+        <a-scene three-ar>
             <a-box scale="0.25 0.25 0.25" position="0 0 0" rotation="0 0 0" color="#4CC3D9" shadow></a-box>
         </a-scene>
     </body>
