--- a/main.html
+++ b/main.html
@@ -11,10 +11,10 @@
     </head>
     <body>
         <div>
-            <h2> Hello1 </h2>
+            <h2> Hello2 </h2>
         </div>
         <a-scene ar>
-            <a-box scale="0.25 0.25 0.25" position="0 0 -0.05" rotation="0 0 0" color="#4CC3D9" shadow></a-box>
+            <a-box scale="0.25 0.25 0.25" position="0 .5 0" rotation="0 0 0" color="#4CC3D9" shadow></a-box>
         </a-scene>
     </body>
 </html>
