--- a/main.html
+++ b/main.html
@@ -11,10 +11,19 @@
     </head>
     <body>
         <div>
-            <h2> Hello6 </h2>
+            <h2> Hello7 </h2>
         </div>
         <a-scene ar>
-            <a-box scale="0.25 0.25 0.25" position="0 0 -1" rotation="0 0 0" color="#4CC3D9" shadow></a-box>
+            <a-box scale="0.25 0.25 0.25" position="0 0 -1" rotation="0 0 0" color="#4CC3D9" scale-on-mouseenter="2 2 2" shadow></a-box>
         </a-scene>
+        <script>
+            AFRAME.registerComponent('scale-on-mouseenter'), {
+                init: function() {
+                    this.el.addEventListener('mouseenter', function () {
+                        this.setAttribute('scale', 2 2 2);
+                    });
+                }
+            };
+        </script>
     </body>
 </html>
