--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello9 </h2>
+            <h2> Hello0 </h2>
         </div>
         
         <script>
@@ -21,7 +21,7 @@
                 },
                 
                 init: function() {
-                    var data = this.data;
+                    var data = this.schema;
                     this.el.addEventListener('mouseenter', function () {
                         this.setAttribute('scale', data.to);
                     });
