--- a/main.html
+++ b/main.html
@@ -11,11 +11,11 @@
     </head>
     <body>
         <div>
-            <h2> Hello0 </h2>
+            <h2> Hello1 </h2>
         </div>
         
         <script>
-            AFRAME.registerComponent('scale-on-mouseenter'), {
+            AFRAME.registerComponent('scale-on-mouseenter', {
                 schema: {
                     to: {default: '2.5 2.5 2.5'}
                 },
@@ -26,7 +26,7 @@
                         this.setAttribute('scale', data.to);
                     });
                 }
-            };
+            });
         </script>
         
         <a-scene ar>
