--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             
             </a-box>
-            <a-entity hello></a-entity>
+            <a-entity box></a-entity>
         </a-scene>
         
     </body>
