--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
         <script src="https://cdn.jsdelivr.net/npm/three.ar.js@latest/dist/three.ar.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@master/dist/aframe-ar.js"></script>
         <script src="main.js"></script>
+        <script src="main.css"></script>
     </head>
     <body>
         <div>
