--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
     </head>
     <body>
         <div>
-            <h2> Hello8 </h2>
+            <h2> Hello9 </h2>
         </div>
         
         <script>
         </script>
         
         <a-scene ar>
-            <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover="color: yellow" shadow>
+            <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
             <a-entity box></a-entity>
