--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello5 </h2>
+            <h2> Hello6 </h2>
         </div>
         
         <script>
@@ -24,7 +24,7 @@
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
             <a-entity box></a-entity>
-            <a-camera><a-cursor></a-cursor></a-camera>
+            <!--<a-camera><a-cursor></a-cursor></a-camera>-->
         </a-scene>
     </body>
 </html>
