--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
             <a-entity box></a-entity>
-            <!--<a-camera><a-cursor></a-cursor></a-camera>-->
+            <a-camera><a-cursor></a-cursor></a-camera>
         </a-scene>
     </body>
 </html>
