--- a/main.html
+++ b/main.html
@@ -19,12 +19,12 @@
         <script>
         </script>
         
-        <a-scene ar>
+        <a-scene ar cursor="rayOrigin: mouse">
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
             <a-entity box></a-entity>
-            <a-camera><a-cursor></a-cursor></a-camera>
+            <!--<a-camera><a-cursor></a-cursor></a-camera>-->
         </a-scene>
     </body>
 </html>
