--- a/main.html
+++ b/main.html
@@ -20,6 +20,11 @@
         </script>
         
         <a-scene ar cursor="rayOrigin: mouse">
+            <a-entity id="logo" imageTracking="
+                                    name:keyboard;
+                                    src:;
+                                    physicalWidth:0.20;
+                                    "></a-entity>
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
