--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello7 </h2>
+            <h2> Hello8 </h2>
         </div>
         
         <script>
@@ -22,9 +22,13 @@
         <a-scene ar cursor="rayOrigin: mouse">
             <a-entity id="logo" imageTracking="
                                     name:keyboard;
-                                    src:;
+                                    src:Keyboard.jpeg;
                                     physicalWidth:0.20;
-                                    "></a-entity>
+                                    ">
+                <a-entity box>
+                        <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
+                </a-entity>
+            </a-entity>
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
