--- a/main.html
+++ b/main.html
@@ -13,13 +13,13 @@
     </head>
     <body>
         <div>
-            <h2> Hello2 </h2>
+            <h2> Hello3 </h2>
         </div>
         
         <script>
         </script>
         
-        <a-scene ar cursor="rayOrigin: mouse">
+        <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
             <a-entity id="logo" imageTracking="
                                     name:keyboard;
                                     src:Keyboard.jpeg;
