--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
     </head>
     <body>
         <div>
-            <h2> Hello4 </h2>
+            <h2> Hello5 </h2>
         </div>
         
         <script>
         </script>
         
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
-            <a-entity id="logo" imageTracking="
+            <a-entity id="logo" show-at-image-marker="
                                     name:keyboard;
                                     src:Keyboard.jpeg;
                                     physicalWidth:0.20;
