--- a/main.html
+++ b/main.html
@@ -13,14 +13,14 @@
     </head>
     <body>
         <div>
-            <h2> Hello2 </h2>
+            <h2> Hello3 </h2>
         </div>
         
         <script>
         </script>
         
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
-            <a-entity id="logo" show-at-image-marker="
+            <a-entity id="logo" imagetracking="
                                     name:keyboard;
                                     src:test.png;
                                     physicalWidth:0.30;
