--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello6 </h2>
+            <h2> Hello7 </h2>
         </div>
         
         <script>
@@ -32,7 +32,7 @@
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
-            <a-entity text="Hello World" position="0 0 -2"></a-entity>
+            <a-entity text="value: Hello World" position="0 0 -2"></a-entity>
             <!--<a-entity box></a-entity>-->
             <!--<a-camera><a-cursor></a-cursor></a-camera>-->
             <a-assets>
