--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello9 </h2>
+            <h2> Hello0 </h2>
         </div>
         
         <script>
@@ -33,7 +33,7 @@
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
             <a-entity text="value: Hello World" position="0 0 -.5"></a-entity>
-            <a-entity text></a-entity>
+            <a-entity words></a-entity>
             <!--<a-entity box></a-entity>-->
             <!--<a-camera><a-cursor></a-cursor></a-camera>-->
             <a-assets>
