--- a/main.html
+++ b/main.html
@@ -34,6 +34,7 @@
             </a-box>
             <a-entity text="value: Hello World" position="0 0 -.5"></a-entity>
             <a-entity words></a-entity>
+            <a-entity log></a-entity>
             <!--<a-entity box></a-entity>-->
             <!--<a-camera><a-cursor></a-cursor></a-camera>-->
             <a-assets>
