--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello6 </h2>
+            <h2> Hello7 </h2>
         </div>
         
         <script>
@@ -34,7 +34,9 @@
             </a-box>
             <a-entity text="value: Hello World" position="0 0 -.5"></a-entity>
             <a-entity words></a-entity>
-            <a-entity log></a-entity>
+            <a-entity log id="log">
+                <a-entity words></a-entity>
+            </a-entity>
             <!--<a-entity box></a-entity>-->
             <!--<a-camera><a-cursor></a-cursor></a-camera>-->
             <a-assets>
