--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello7 </h2>
+            <h2> Hello8 </h2>
         </div>
         
         <script>
@@ -33,7 +33,7 @@
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
             <a-entity text="value: Hello World" position="0 0 -.5"></a-entity>
-            <a-entity words></a-entity>
+            <a-entity words position="0 .1 -.5"></a-entity>
             <a-entity log id="log">
                 <a-entity words></a-entity>
             </a-entity>
