--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
             <a-entity id="logo" imagetracking="
                                     name:keyboard;
-                                    src:test.png;
+                                    src:./TestImages/test.png;
                                     physicalWidth:0.1651;
                                     ">
                 <a-entity box>
@@ -42,7 +42,7 @@
             <a-assets>
             <!-- preload image -->
                 <img crossorigin="anonymous"
-                     src="test.png"></img>
+                     src="./TestImages/test.png"></img>
             </a-assets>
         </a-scene>
     </body>
