--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello8 </h2>
+            <h2> Hello9 </h2>
         </div>
         
         <script>
@@ -22,7 +22,7 @@
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
             <a-entity id="logo" imagetracking="
                                     name:keyboard;
-                                    src:./TestImages/Keyboard.jpeg;
+                                    src:./TestImages/Painting_2.png;
                                     physicalWidth:0.1651;
                                     ">
                 <a-entity box>
@@ -42,7 +42,7 @@
             <a-assets>
             <!-- preload image -->
                 <img crossorigin="anonymous"
-                     src="./TestImages/Keyboard.jpeg"></img>
+                     src="./TestImages/Painting_2.png"></img>
             </a-assets>
         </a-scene>
     </body>
