--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello7 </h2>
+            <h2> Hello8 </h2>
         </div>
         
         <script>
@@ -22,7 +22,7 @@
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
             <a-entity id="logo" imagetracking="
                                     name:keyboard;
-                                    src:./TestImages/Basic_Test.jpg;
+                                    src:./TestImages/Basic_Test.png;
                                     physicalWidth:0.1651;
                                     ">
                 <a-entity box>
