--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello0 </h2>
+            <h2> Hello0 <script> document.write(fishFoodCount) </script> </h2>
         </div>
         
         <script>
