--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello4 <script> document.write(fishFoodCount) </script> </h2>
+            <h2> Hello5 <script> document.write(fishFoodCount) </script> </h2>
         </div>
         
         <script>
@@ -32,6 +32,7 @@
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
+            <a-entity box position="-1 0 0"></a-entity>
             <a-entity text="value: Hello World" position="0 0 -.5"></a-entity>
             <a-entity words position="0 .1 -.5"></a-entity>
             <a-entity log id="log">
