--- a/main.html
+++ b/main.html
@@ -32,7 +32,7 @@
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
-            <a-entity box position="-1 0 0"></a-entity>
+            <a-entity box></a-entity>
             <a-entity text="value: Hello World" position="0 0 -.5"></a-entity>
             <a-entity words position="0 .1 -.5"></a-entity>
             <a-entity log id="log">
