--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello8 <script> document.write(fishFoodCount) </script> </h2>
+            <h2> Hello9 <script> document.write(fishFoodCount) </script> </h2>
         </div>
         
         <script>
@@ -25,14 +25,14 @@
                                     src:./TestImages/Painting_2_Fish_Food.png;
                                     physicalWidth:0.1651;
                                     ">
-                <a-entity box>
+                <a-box box>
                         <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
-                </a-entity>
+                </a-box>
             </a-entity>
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
-            <a-entity box></a-entity>
+            <a-box box></a-box>
             <a-entity text="value: Hello World" position="0 0 -.5"></a-entity>
             <a-entity words position="0 .1 -.5"></a-entity>
             <a-entity log id="log">
