--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div>
-            <h2> Hello8 <script id="fish"> document.write(fishFoodCount) </script> </h2>
+            <h2> Hello9 <div id="fish"> <script>document.write(fishFoodCount)</script> </div> </h2>
         </div>
         
         <script>
