--- a/main.html
+++ b/main.html
@@ -13,7 +13,10 @@
     </head>
     <body>
         <div>
-            <h2> Hello9 <div id="fish"> <script>document.write(fishFoodCount)</script> </div> </h2>
+            <h2> Hello0 <div id="fish"> <script>document.write(fishFoodCount)</script> </div> </h2>
+        </div>
+        <div id="ffh">
+            <h2 id="fish"><script>document.write(fishFoodCount)</script></h2>
         </div>
         
         <script>
