--- a/main.html
+++ b/main.html
@@ -12,8 +12,8 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
-        <div>
-            <h2> Hello1 </h2>
+        <div id= "testing">
+            <h2> Hello2 </h2>
         </div>
         <div id="ffh">
             <h2 id="fish"><script>document.write(fishFoodCount)</script></h2>
