--- a/main.html
+++ b/main.html
@@ -13,10 +13,10 @@
     </head>
     <body>
         <div id= "testing">
-            <h2> Hello4 </h2>
+            <h2> Hello5 </h2>
         </div>
         <div id="ffh">
-            <h2 id="fish"><script>document.write(fishFoodCount)</script></h2>
+            <h2 id="fish">FF: <script>document.write(fishFoodCount)</script></h2>
         </div>
         
         <script>
