--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <div id= "testing">
-            <h2> Hello6 </h2>
+            <h2> Hello7 </h2>
         </div>
         <div id="ffh">
             <h2 id="fish">FF: <script>document.write(fishFoodCount)</script></h2>
@@ -35,7 +35,7 @@
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
-            <a-entity words position="0 .1 -.5"></a-entity>
+            <a-entity text="value: Hello World" position="0 0 -.5"></a-entity>
             <a-entity log id="log">
                 <a-entity words></a-entity>
             </a-entity>
