--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id= "testing">
-            <h2> Hello4 </h2>
+            <h2> Hello5 </h2>
         </div>
         <div id="ffh">
             <h2 id="fish">FF: <script>document.write(fishFoodCount)</script></h2>
@@ -41,7 +41,7 @@
                 <a-entity words></a-entity>
             </a-entity>
             <a-box box></a-box>
-            <a-boxtest position="0 0 -1"></a-boxtest>
+            <a-boxtest box position="0 0 -1"></a-boxtest>
             <!--<a-entity box></a-entity>-->
             <!--<a-camera><a-cursor></a-cursor></a-camera>-->
             <a-assets>
