--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id= "testing">
-            <h2> Hello4 </h2>
+            <h2> Hello5 </h2>
         </div>
         <div id="ffh">
             <h2 id="fish">FF: <script>document.write(fishFoodCount)</script></h2>
@@ -33,17 +33,19 @@
                         <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
                 </a-box>
             </a-entity>
+
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
+
             <a-entity text="value: Hello World; align: center" position="0 0 -.5"></a-entity>
+
             <a-planetest>
-                <a-entity words></a-entity>
+                <a-texttest></a-texttest>
             </a-planetest>
-            <!--<a-box box></a-box>-->
+
             <a-boxtest box x='0' y='0' z='-1'></a-boxtest>
-            <!--<a-entity box></a-entity>-->
-            <!--<a-camera><a-cursor></a-cursor></a-camera>-->
+
             <a-assets>
             <!-- preload image -->
                 <img crossorigin="anonymous"
