--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id= "testing">
-            <h2> Hello5 </h2>
+            <h2> Hello6 </h2>
         </div>
         <div id="ffh">
             <h2 id="fish">FF: <script>document.write(fishFoodCount)</script></h2>
@@ -38,7 +38,7 @@
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
 
-            <a-entity text="value: Hello World; align: center" position="0 0 -.5"></a-entity>
+            <a-texttest text="Hello World" x='0' y='0' z='-.5'></a-texttest>
 
             <a-planetest>
                 <a-texttest></a-texttest>
