--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id= "testing">
-            <h2> Hello7 </h2>
+            <h2> Hello8 </h2>
         </div>
         <div id="ffh">
             <h2 id="fish">FF: <script>document.write(fishFoodCount)</script></h2>
@@ -39,6 +39,7 @@
             </a-box>
 
             <a-texttest wordValue="Hello World" x='0' y='0' z='-.5'></a-texttest>
+            <a-texttest wordValue='Hello World' x='0' y='0' z='-.8'></a-texttest>
 
             <a-planetest>
                 <a-texttest></a-texttest>
