--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <div id= "testing">
-            <h2> Hello4 </h2>
+            <h2> Hello5 </h2>
         </div>
         <div id="ffh">
             <h2 id="fish">FF: <script>document.write(fishFoodCount)</script></h2>
@@ -29,9 +29,9 @@
                                     src:./TestImages/Painting_2_Fish_Food.png;
                                     physicalWidth:0.1651;
                                     ">
-                <a-box box>
+                <a-boxtest box x='0' y='0' z='0'>
                         <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
-                </a-box>
+                </a-boxtest>
             </a-entity>
 
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
