--- a/main.html
+++ b/main.html
@@ -19,17 +19,14 @@
         <div id="ffh">
             <h2 id="fish">FF: <script>document.write(fishFoodCount)</script></h2>
         </div>
-        
-        <script>
-        </script>
-        
+        <!-- sets up ar scene with a cursor -->
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
             <a-entity id="logo" imagetracking="
                                     name:keyboard;
                                     src:./TestImages/Painting_2_Fish_Food.png;
                                     physicalWidth:0.1651;
                                     ">
-                <a-boxtest box x='0' y='0' z='0'>
+                <a-boxtest fishfoodcollection x='0' y='0' z='0'>
                         <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
                 </a-boxtest>
             </a-entity>
@@ -45,7 +42,7 @@
                 <a-texttest></a-texttest>
             </a-planetest>
 
-            <a-boxtest box x='0' y='0' z='-1'></a-boxtest>
+            <a-boxtest fishfoodcollection x='0' y='0' z='-1'></a-boxtest>
 
             <a-assets>
             <!-- preload image -->
