--- a/main.html
+++ b/main.html
@@ -5,7 +5,6 @@
         <title> AR Test </title>
         <link rel="stylesheet" type="text/css" href="main.css">
         <script src="https://aframe.io/releases/0.8.0/aframe.js"></script>
-        <!--<script src="../dist/three.js"></script> -->
         <script src="https://cdn.jsdelivr.net/npm/three.ar.js@latest/dist/three.ar.js"></script>
         <script src="https://cdn.jsdelivr.net/gh/chenzlabs/aframe-ar@master/dist/aframe-ar.js"></script>
         <script src="main.js"></script>
@@ -13,9 +12,11 @@
         <link rel="stylesheet" href="main.css">
     </head>
     <body>
+        <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
             <h2> Hello5 </h2>
         </div>
+        <!-- element used for tracking fish food -->
         <div id="ffh">
             <h2 id="fish">FF: <script>document.write(fishFoodCount)</script></h2>
         </div>
@@ -43,7 +44,7 @@
             </a-planetest>
 
             <a-boxtest fishfoodcollection x='0' y='0' z='-1'></a-boxtest>
-
+            <!-- used to preload objects -->
             <a-assets>
             <!-- preload image -->
                 <img crossorigin="anonymous"
