--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello8 </h2>
+            <h2> Hello9 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -31,6 +31,14 @@
                         <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
                 </a-boxtest>
             </a-entity>
+
+            <a-boxtest fishfoodcollection x='0' y='0' z='0' imagetracking="
+                                                                name:letter;
+                                                                src:./TestImages/Alphabet_Letter_K_test.png;
+                                                                physicalWidth:0.1651;
+                                                                ">
+                    <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
+            </a-boxtest>
 
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
@@ -49,6 +57,8 @@
             <!-- preload image -->
                 <img crossorigin="anonymous"
                      src="./TestImages/Painting_2_Fish_Food.png"></img>
+                <img crossorigin="anonymous"
+                     src="./TestImages/Alphabet_Letter_K_test.png"></img>
             </a-assets>
         </a-scene>
     </body>
