--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello1 </h2>
+            <h2> Hello2 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -22,23 +22,15 @@
         </div>
         <!-- sets up ar scene with a cursor -->
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
-            <a-entity id="logo" imagetracking="
-                                    name:keyboard;
+            <a-entity id="tracker" imagetracking="
+                                    name:painting;
                                     src:./TestImages/Painting_2_Fish_Food.png;
                                     physicalWidth:0.1651;
                                     ">
-                <a-boxtest fishfoodcollection x='0' y='0' z='0'>
+                <a-boxtest fishfoodcollection="id:tracker;" x='0' y='0' z='0'>
                         <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
                 </a-boxtest>
             </a-entity>
-
-            <a-boxtest fishfoodcollection x='1' y='0' z='0' imagetracking="
-                                                                name:letter;
-                                                                src:./TestImages/Alphabet_Letter_K_test.png;
-                                                                physicalWidth:0.1651;
-                                                                ">
-                    <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
-            </a-boxtest>
 
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
