--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello1 </h2>
+            <h2> Hello2 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -43,7 +43,7 @@
                 <a-texttest></a-texttest>
             </a-planetest>
 
-            <a-boxtest fishfoodcollection x='0' y='0' z='-1'></a-boxtest>
+            <!--<a-boxtest fishfoodcollection x='0' y='0' z='-1'></a-boxtest>-->
             <!-- used to preload objects -->
             <a-assets>
             <!-- preload image -->
