--- a/main.html
+++ b/main.html
@@ -43,7 +43,7 @@
                 <a-texttest></a-texttest>
             </a-planetest>
 
-            <!--<a-boxtest fishfoodcollection x='0' y='0' z='-1'></a-boxtest>-->
+            <a-boxtest fishfoodcollection x='0' y='0' z='-1'></a-boxtest>
             <!-- used to preload objects -->
             <a-assets>
             <!-- preload image -->
