--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello4 </h2>
+            <h2> Hello5 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -22,10 +22,10 @@
         </div>
         <!-- element used for displaying fish info -->
         <div id="fishinfo">
-            <h3 id="fishname">Fish Name</h3>
-            <h3 id="fishdata">Age:</h3>
-            <h3 id="fishdata">Weight:</h3>
-            <h3 id="fishdata">Length:</h3>
+            <h3 id="fishname"><script>document.write(fishName)</script></h3>
+            <h3 id="fishdata"><script>document.write(fishAge)</script></h3>
+            <h3 id="fishdata"><script>document.write(fishWeight)</script></h3>
+            <h3 id="fishdata"><script>document.write(fishLength)</script></h3>
         </div>
         <!-- sets up ar scene with a cursor -->
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
@@ -51,6 +51,8 @@
             </a-planetest>
 
             <a-boxtest fishfoodcollection x='0' y='0' z='-1'></a-boxtest>
+
+            <a-fish fish x='-.5' y='0' z='-.5'></a-fish>
             <!-- used to preload objects -->
             <a-assets>
             <!-- preload image -->
