--- a/main.html
+++ b/main.html
@@ -23,9 +23,9 @@
         <!-- element used for displaying fish info -->
         <div id="fishinfo">
             <h3 id="fishname"><script>document.write(fishName)</script></h3>
-            <h3 id="fishdata"><script>document.write(fishAge)</script></h3>
-            <h3 id="fishdata"><script>document.write(fishWeight)</script></h3>
-            <h3 id="fishdata"><script>document.write(fishLength)</script></h3>
+            <h3 class="fishdata"><script>document.write(fishAge)</script></h3>
+            <h3 class="fishdata"><script>document.write(fishWeight)</script></h3>
+            <h3 class="fishdata"><script>document.write(fishLength)</script></h3>
         </div>
         <!-- sets up ar scene with a cursor -->
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
