--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello6 </h2>
+            <h2> Hello7 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -23,9 +23,9 @@
         <!-- element used for displaying fish info -->
         <div id="fishinfo">
             <h3 id="fishname"><script>document.write(fishName)</script></h3>
-            <h3 class="fishdata"><script>document.write(fishAge)</script></h3>
-            <h3 class="fishdata"><script>document.write(fishWeight)</script></h3>
-            <h3 class="fishdata"><script>document.write(fishLength)</script></h3>
+            <h3 id='fage' class="fishdata"><script>document.write(fishAge)</script></h3>
+            <h3 id='fweight' class="fishdata"><script>document.write(fishWeight)</script></h3>
+            <h3 id='flength' class="fishdata"><script>document.write(fishLength)</script></h3>
         </div>
         <!-- sets up ar scene with a cursor -->
         <a-scene ar="worldSensing: true" cursor="rayOrigin: mouse">
