--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello3 </h2>
+            <h2> Hello4 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -53,6 +53,7 @@
             <a-boxtest fishfoodcollection x='0' y='0' z='-1'></a-boxtest>
 
             <a-fish fish x='-.5' y='0' z='-.5'></a-fish>
+            <a-fish fish x='.5' y='0' z='-.5'></a-fish>
             <!-- used to preload objects -->
             <a-assets>
             <!-- preload image -->
