--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello2 </h2>
+            <h2> Hello3 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -42,9 +42,10 @@
             <a-box scale="0.25 0.25 0.25" position="1 0 0" rotation="0 0 0" color="#4CC3D9" hover shadow>
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
+
             <a-entity rotation="0 0 0">
                 <a-animation attribute="rotation" to="0 360 0" direction="normal" dur="10000" repeat="indefinite" easing="linear"></a-animation>
-                <a-entity geometry="primitive: sphere; radius: .05;" position="2 0 0"></a-entity>
+                <a-entity geometry="primitive: sphere; radius: .05;" material="color: blue;"position="2 0 0"></a-entity>
             </a-entity>
 
             <a-texttest t="Hello World" x='0' y='0' z='-.5'></a-texttest>
