holding spot ref check

--- a/main.html
+++ b/main.html
@@ -63,7 +63,7 @@
             <a-fish fish x='-.5' y='0' z='-.5'></a-fish>
             <a-fish fish x='.5' y='0' z='-.5'></a-fish>
             <a-camera>
-                <a-entity id="fishhold"></a-entity>
+                <a-entity id="fishhold" position="0 .02 -.1"></a-entity>
                 <a-fish z='-.1' y='.02' radius='.01' color='green'></a-fish>
             </a-camera>
             <!-- used to preload objects -->
