--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     <body>
         <!-- element used for testing purposes only, I have been using it to tell when the code has been updated for testing -->
         <div id= "testing">
-            <h2> Hello2 </h2>
+            <h2> Hello3 </h2>
         </div>
         <!-- element used for tracking fish food -->
         <div id="ffh">
@@ -49,7 +49,7 @@
             </a-box>
 
             <!-- tests orbiting animation -->
-            <a-entity pausetest rotation="0 0 0">
+            <a-entity spawntest rotation="0 0 0">
                 <a-animation attribute="rotation" to="0 360 0" direction="normal" dur="10000" repeat="indefinite" easing="linear"></a-animation>
                 <a-entity geometry="primitive: sphere; radius: .05;" material="color: blue;"position="2 0 0"></a-entity>
             </a-entity>
