added commenting on finds

--- a/main.html
+++ b/main.html
@@ -48,10 +48,10 @@
                 <a-animation attribute="rotation" to="0 360 0" direction="alternate" dur="2000" repeat ="indefinite"></a-animation>
             </a-box>
 
-            <!-- tests orbiting animation -->
+            <!-- tests orbiting animation, spawning objects at runtime, and changing parenting at runtime -->
             <a-entity spawntest2 rotation="0 0 0">
                 <a-animation attribute="rotation" to="0 360 0" direction="normal" dur="10000" repeat="indefinite" easing="linear"></a-animation>
-                <a-entity geometry="primitive: sphere; radius: .05;" material="color: blue;"position="2 0 0"></a-entity>
+                <a-entity geometry="primitive: sphere; radius: .05;" material="color: blue;" position="2 0 0"></a-entity>
             </a-entity>
 
             <!-- text tests -->
